letzte section und footer fehlen

--- a/index.html
+++ b/index.html
@@ -51,6 +51,35 @@
 
             <div class="third-img"></div>
         </section>
+
+        <section class="center-section">
+            <h1>illustrations for applications</h1>
+            <p>Welcome to my space for experiments! Look at this like a journey we can take together every step of the way, beginning another chapter with each new phase of the project development. And who knows where it will take us?</p>
+            
+        </section>
+            <img id="img-left" src="assets/img/illustration4.png" alt="">
+            <img id="img-center" src="assets/img/illustration5.png" alt="">
+            <img id="img-right" src="assets/img/illustration6.png" alt="">
+
+        <section class="center-section2">
+            <h1>examples of use</h1>
+            <p>Each illustration offers the possibility of limitless interpretations and uses and everyone can give it its own meaning. It depends only on each one's creativity and free spirit.</p>
+            
+        </section>
+            <img class="examples" src="assets/img/illustration7.jpg" alt="">
+            <img class="examples" src="assets/img/illustration8.jpg" alt="">
+            <img class="examples" src="assets/img/illustration9.jpg" alt="">
+            <img class="examples" src="assets/img/illustration10.jpg" alt="">
+            <img class="examples" src="assets/img/illustration11.jpg" alt="">
+            <img class="examples" src="assets/img/illustration12.jpg" alt="">
+
+        <section>
+            <article>
+                <h1>download illustrations</h1>
+                <p>You're free to use these illustrations for both personal and commercial projects. And if you want to make a human happy would be nice to give credits by mentioning this website or be my supporter. I have created a membership plan for people who love my works and wish to support me and receive new artwork regularly.</p>
+            </article>
+
+        </section>
     </main>
 </body>
 </html>
