nur noch footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <ul>
+        <ul class="nav">
             <li>
                 <a href="#">WHY?</a>
             </li>
@@ -73,13 +73,47 @@
             <img class="examples" src="assets/img/illustration11.jpg" alt="">
             <img class="examples" src="assets/img/illustration12.jpg" alt="">
 
-        <section>
+        <section class="center-section2 center-section3">
             <article>
                 <h1>download illustrations</h1>
                 <p>You're free to use these illustrations for both personal and commercial projects. And if you want to make a human happy would be nice to give credits by mentioning this website or be my supporter. I have created a membership plan for people who love my works and wish to support me and receive new artwork regularly.</p>
-            </article>
 
+                <div id="membership-box">
+                    <h2>membership</h2>
+                    <h3>$57</h3>
+                    <p id="per-year">per year</p>
+                    <ul>
+                        <li>No link required</li>
+                        <li>Unlimited access</li>
+                        <li>New content regularly</li>
+                        <li>Colored versions</li>
+                        <li>PNG format files</li>
+                        <li>SVG format files</li>
+                        <li>Premium support</li>
+                    </ul>
+
+                    <a href="" id="member-button">Become a member</a>
+    
+                </div>
+            </article>
+        
         </section>
+
+
     </main>
+<footer>
+    <h1>any absurd suggestions?</h1>
+    <ul>
+        <li>Email</li>
+        <li> <a href="#">super@super.de</a> </li>
+        <li>Follow me</li>
+        <li> <a href="#">fb</a>
+        <a href="">ig</a>
+        <a href="">tw</a> </li>
+        <a href="">yt</a> </li>
+    </ul>
+</footer>
+
 </body>
+
 </html>
