--- a/index.html
+++ b/index.html
@@ -107,10 +107,12 @@
         <li>Email</li>
         <li> <a href="#">super@super.de</a> </li>
         <li>Follow me</li>
-        <li> <a href="#">fb</a>
-        <a href="">ig</a>
-        <a href="">tw</a> </li>
-        <a href="">yt</a> </li>
+        <li> 
+            <a href="#" id="footer-fb"> fb</a>
+            <a href="#" id="footer-ig"> ig</a>
+            <a href="#" id="footer-tw"> tw</a>
+            <a href="#" id="footer-yt"> yt</a> 
+    </li>
     </ul>
 </footer>
 
